...
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AnatomyShareLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8yH-3g-DT9">
                                        <rect key="frame" x="122" y="0.0" width="570" height="135"/>
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="9pd-qg-FNG">
                                        <rect key="frame" x="122" y="143" width="570" height="82"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ejt-Mb-U3f">
                                                <rect key="frame" x="0.0" y="0.0" width="570" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="d2w-Ew-EWo"/>
                                                </constraints>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                                        <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="KXn-eW-kXG"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="loginPressed:" destination="ndP-uj-q4b" eventType="touchUpInside" id="bG0-ge-cso"/>
                                        </connections>
                                    </button>
...
                                        <rect key="frame" x="122" y="281" width="570" height="40"/>
                                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="axa-gs-0Sb"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <state key="normal" title="Forgot Password?">
                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="forgotPasswordPressed:" destination="ndP-uj-q4b" eventType="touchUpInside" id="EQg-m3-mii"/>
                                        </connections>
                                    </button>
...
                                            <action selector="disagreePressed:" destination="gMR-X2-stH" eventType="touchUpInside" id="BId-Rq-TJa"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VGA-i5-Kmw">
                                        <rect key="frame" x="207" y="0.0" width="54" height="33"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <state key="normal" title="Accept"/>
                                        <connections>
                                            <action selector="agreePressed:" destination="gMR-X2-stH" eventType="touchUpInside" id="lzE-7Z-NeV"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                                            <constraint firstAttribute="height" constant="40" id="Yfa-6W-MHl"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m0O-tH-Bas">
                                        <rect key="frame" x="0.0" y="82" width="584" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="f1K-Zg-Wbd"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
